# cms_graph_gan

./: .code-workspace  .gitignore  .gitmodules  .pre-commit-config.yaml  .venv  .ycm_extra_conf.py  MANIFEST.in  bashFunctionCollection.sh  conda_setup.sh  fgsim.code-workspace  gen_configs.py  gen_configs2.py  maxwell_setup.sh  pyproject.toml  quick_run.py  ramenv.sh  remote_run.sh  run.sh  run_in_env.sh  setup.cfg  setup.py  tox.ini  trainremote.sh  workspace.code-workspace
docs/: modules.rst
fgsim/: __main__.py  cli.py  cometml.py  config.py  default.yaml  fw_data_loader.py  fw_simple_dataloader.py  load_sparse_ds.py  monitor.py  prunegraph.py  torchdata_loader.py  transform.py  types.py
fgsim/commands/: dump.py  generate.py  implant_checkpoint.py  overwrite.py  preprocess.py  setup.py  testing.py  training.py
fgsim/datasets/: __init__.py  base_dataset.py
fgsim/geo/: batch_stack.py  batchtype.py  detid_to_graph.py  fw_loader.py  geo_lup.py  graph.py  transform.py
fgsim/io/: __init__.py  batch_tools.py  chunks.py  clic_seq.py  dataset.py  dequantscaler.py  file_manager.py  graph_seq.py  grid_seq.py  hgcal_seq.py  lightning_dataset.py  loader.py  pc_seq.py  pldata.py  postprocessor.py  preprocessed_seq.py  process_queue.py  pyg_ds.py  qf-notes.md  queued_dataset.py  queued_ds.py  queueflow.py  scaler_base.py  sel_loader.py  sel_seq.py  torch_dataset.py
fgsim/ml/: checkpoint.py  early_stopping.py  eval.py  eval_metrics.py  holder.py  interactive_trainer.py  loss.py  network.py  optim.py  predict.py  profile.py  smoothing.py  test.py  testing.py  train_state.py  trainer.py  training.py  val_loss.py  val_metrics.py  validate.py  validation.py
fgsim/model/: holder.py  model.py  training.py
fgsim/models/: cnn.py  deepconv.py  deepconv_hlv.py  dnn_gen.py  ffn.py  forward_deepconv_hlv.py  forward_dnn_deepconv.py  forward_hlv_dnn_deepconv.py  forward_lin.py  forward_lin_v2.py  forward_lin_v3.py  hgcal.py  hgcal_edge_index.py  linreg.py  linreg_hlv.py  msgpass_dnn_deepconv.py  msgpass_hlv_dnn_deepconv.py  msgpass_lin_v1.py  simple_forward.py  simple_msgpass.py
fgsim/monitoring/: experiment_organizer.py  logger.py  metrics_aggr.py  monitor.py  pfmt.py  train_log.py
fgsim/old/: batchstacking.py  checkgraph.py  chunkds.py  full_grid_to_graph.py  load_sparse_ds.py  plot.py  profile.py  to_gpu.py  write_sparse_ds.py
fgsim/plot/: binborders.py  effects_graph_pruning.py  eval_plots.py  fig_logger.py  hist1d.py  hist2d.py  hlv_marginals.py  infolut.py  jetfeatures.py  jetnetplots.py  labels.py  loss.py  marginals.py  model_plotter.py  modelgrads.py  predict.py  ratioplot.py  test.py  validation_plots.py  xyscatter.py
fgsim/train/: fw_train.py  holder.py  model.py  train.py
fgsim/utils/: __init__.py  balanced_cluster.py  bashFunctionCollection.sh  batch.py  batch_utils.py  check_for_nans.py  checkgraph.py  cli.py  count_iterations.py  count_parameters.py  cuda_clear.py  dump_training.py  istarmap.py  jetnetutils.py  logger.py  memory.py  model_summary.py  move_batch_to_device.py  oc_resolvers.py  oc_utils.py  optimto.py  preprocess.py  push_to_old.py  (+7 more)
raytune/: combine_configs.py  hyperpars.py  prepare_testing.py  ray.yaml  rayonslurm.sh  raysbatch.sh  runconf.py  trainable.py  tune.py
scripts/: conda_setup.sh  ffn-dist.ipynb  gen_configs.py  maxwell_setup.sh  ow_conf.py  plot_model_activations.py  ramenv.sh  rebuild_wandb.py  run.py  run.sh  wipe_wandb_run.py
wandb/: agent.py  hyperpars.py  spawn_agents.sh  sweep.py
(+243 files in other folders)
