[tool.isort]
profile = "black"


[tool.black]
line-length = 84
target-version = ['py38']
experimental-string-processing = true
include = '.*\.pyi?$'
exclude = '''
(
  /(
    \..*
    | _build
    | buck-out
    | build
    | dist
    | fgsim/old
    | fgsim/geo/libs
  )
)
'''


[build-system]
requires = ["setuptools", "wheel", 'pybind11==2.6.1','numpy==1.19.4']
build-backend = "setuptools.build_meta"

[mypy]
python_version = 38
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_configs = true
show_error_codes = true
exclude = "(\\..*|_build|dist|fgsim/old|fgsim/geo/libs)"
