[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = "*.py"

[tool.flake8]
max-line-length = 93
per-file-ignores = """
    fgsim/__main__.py: E402,F401,
    **/__init__.py: F401
    """
exclude = [
    "*/tests",
    "fgsim/geo/libs/*",
    "fgsim/old/*",
    ".tox",
    "docs",
    "__pycache__"
    ]
ignore = "E203,E302,W503,F541,"


[tool.isort]
profile = "black"

[tool.black]
line-length = 84
target-version = ['py38']
experimental-string-processing = true
include = '.*\.pyi?$'
exclude = '''
(
  /(
    \..*
    | _build
    | buck-out
    | build
    | dist
    | fgsim/old
    | fgsim/geo/libs
  )
)
'''

[mypy]
python_version = 38
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_configs = true
show_error_codes = true
exclude = "(\\..*|_build|dist|fgsim/old|fgsim/geo/libs)"
